--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <!-- Bottstrap css cdn -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <!-- Font Awesome link -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+    <!-- CSS stylesheet override -->
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -430,10 +434,20 @@
                         <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show"
                             aria-labelledby="panelsStayOpen-headingOne">
                             <div class="accordion-body">
-                                flexbox এটি one-dimontional layout. এটি default ভাবে এটি row detraction থাকে। এবং layout
-                                এলাইমেন্ট ঠিক রাখতে বেশি use করা হয়।
-                                grid এটি multiple deration.এবং layout করার জন্য grid used হয়। এটি মাধ্যমে অনেক সহজে
-                                responsive layout করা হয়ে থাকে।
+                                Grid is made for two-dimensional layout while Flexbox is for one. This means Flexbox can
+                                work on either row or columns at a time, but Grids can work on both.
+                                Flexbox, gives you more flexibility while working on either element (row or column).
+                                HTML markup and CSS will be easy to manage in this type of scenario.
+                                GRID gives you more flexibility to move around the blocks irrespective of your HTML
+                                markup.
+                                Flexbox offers greater control over alignment and space distribution between items.
+                                Being one-dimensional, Flexbox only deals with either columns or rows.
+                                Grid has two-dimension layout capabilities which allow flexible widths as a unit of
+                                length. This compensates for the limitations in Flex.Flex Direction allows developers to
+                                align elements vertically or horizontally, which is used when developers create and
+                                reverse rows or columns.
+                                CSS Grid deploys fractional measure units for grid fluidity and auto-keyword
+                                functionality to automatically adjust columns or rows.
                             </div>
                         </div>
                     </div>
@@ -448,10 +462,11 @@
                         <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse"
                             aria-labelledby="panelsStayOpen-headingTwo">
                             <div class="accordion-body">
-                                bootstrap component and utilities base css framework and tailwind utilities base অনেক
-                                বেশি costomization obson থাকে। এজন্য সহজে ইচ্ছে মত responsive design করা যায়। bootstrap
-                                component দিয়ে অনেক কম সমায়ে ডিজান layout copy করে কাজ করা যায়। কিন্তু মনে মতো ডিজাইন
-                                করতে তার bootstrap সাথে row-css used করা লাগে।
+                                Tailwind offers predesigned widgets to build a site from scratch with fast UI
+                                development.Bootstrap comes with a set of pre-styled responsive, mobile-first components
+                                that possess a definite UI kit.Tailwind CSS uses a set of utility classes to create a
+                                neat UI with more flexibility and uniqueness.Sites created using Bootstrap follow the
+                                generic pattern that makes them look identical.
                             </div>
                         </div>
                     </div>
@@ -466,29 +481,38 @@
                         <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse"
                             aria-labelledby="panelsStayOpen-headingThree">
                             <div class="accordion-body">
-                                hight width এর ভিতর কন্টেন্ট থাকে। কন্টেন্ট ভিতর অংশে padding থাকে বাইরে অংশে margin
-                                থাকে এবং margin gap এর জন্য used করা হয়।এই সবগুলো মিলে css box-model.
+                                In CSS, the term "box model" is used when talking about design and layout.
+
+                                The CSS box model is essentially a box that wraps around every HTML element. It consists
+                                of: margins, borders, padding, and the actual content
                             </div>
                         </div>
-                    </div>
-                    <div class="accordion-item">
-                        <h2 class="accordion-header" id="panelsStayOpen-headingFour">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#panelsStayOpen-collapseFour" aria-expanded="false"
-                                aria-controls="panelsStayOpen-collapseFour">
-                                What is semantic tags ?
-                            </button>
-                        </h2>
-                        <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse"
-                            aria-labelledby="panelsStayOpen-headingFour">
-                            <div class="accordion-body">
-                                semantic tag বলতে HTML5 tag গুলো layout header, main, article, footer এই tag গুলো
-                                মিনিংফুল নাম বহন করে।
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="panelsStayOpen-headingFour">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#panelsStayOpen-collapseFour" aria-expanded="false"
+                                    aria-controls="panelsStayOpen-collapseFour">
+                                    What is semantic tags ?
+                                </button>
+                            </h2>
+                            <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse"
+                                aria-labelledby="panelsStayOpen-headingFour">
+                                <div class="accordion-body">
+                                    Semantic HTML or semantic markup is HTML that introduces meaning to the web page
+                                    rather than just presentation. For example, a p tag indicates that the enclosed text
+                                    is a paragraph. This is both semantic and presentational because people know what
+                                    paragraphs are, and browsers know how to display them.
+
+                                    On the flip side of this equation, tags such as b(tag) and i(tag) are not semantic.
+                                    They define only how the text should look (bold or italic), and don't provide any
+                                    additional meaning to the markup.
+                                    Examples of semantic HTML tags include:Header tags(h1 through h6),blockquote,code,em
+
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
         </section>
         <!-- Asked Questions End -->
         <!-- Companies Brand start -->
@@ -522,6 +546,27 @@
 
         <!-- Companies Brand end -->
     </main>
+    <!-- Footer section -->
+    <footer>
+        <footer class="bg-dark mt-5">
+            <div class="container">
+                <div class="text-white p-5 ">
+                    <h2 class="text-center mb-4">Digitor</h2>
+                    <p class="text-center ">Office 41, Zawaya Buildin, Ghala Muscat,<br>
+                        Sultanate of Oman</p>
+                    <small class="d-block text-center ">Privacy Ploicy | Terms of use</small>
+                    <div class="text-center">
+                        <i class="fa-brands fa-facebook"></i>
+                        <i class="fa-brands fa-twitter ms-3"></i>
+                        <i class="fa-brands fa-instagram ms-3"></i>
+                        <i class="fa-brands fa-github ms-3"></i>
+                    </div>
+                </div>
+            </div>
+        </footer>
+    </footer>
+
+    <!-- Bootstrap Js cdn -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
